--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               class="card__image"/>
               <div class="card__content">
                 <h2 class="card__title">Val Thorens</h2>
-                <button typle="button" class="card__like-btn"></button>
+                <button type="button" class="card__like-btn"></button>
               </div>
             </li>
             <li class="card">
