--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="=???" />
     <meta name="author" content="Jessica Unger" />
-    <meta name="keywords" content="HTML, CSS, ???" />
+    <meta name="keywords" content="photos, photography" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>Spots</title>
@@ -68,7 +68,7 @@
               class="card__image"/>
               <div class="card__content">
                 <h2 class="card__title">A very long bridge, over the forest</h2>
-                <button typle="button" class="card__like-btn"></button>
+                <button type="button" class="card__like-btn"></button>
               </div>
             </li>
             <li class="card">
