--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               class="card__image"/>
               <div class="card__content">
                 <h2 class="card__title">Restaurant terrace</h2>
-                <button typle="button" class="card__like-btn"></button>
+                <button type="button" class="card__like-btn"></button>
               </div>
             </li>
             <li class="card">
@@ -59,7 +59,7 @@
               class="card__image"/>
               <div class="card__content">
                 <h2 class="card__title">An outdoor cafe</h2>
-                <button typle="button" class="card__like-btn"></button>
+                <button type="button" class="card__like-btn"></button>
               </div>
             </li>
             <li class="card">
@@ -77,7 +77,7 @@
               class="card__image"/>
               <div class="card__content">
                 <h2 class="card__title">Tunnel with morning light</h2>
-                <button typle="button" class="card__like-btn"></button>
+                <button type="button" class="card__like-btn"></button>
               </div>
             </li>
             <li class="card">
@@ -86,7 +86,7 @@
               class="card__image"/>
               <div class="card__content">
                 <h2 class="card__title">Mountain house</h2>
-                <button typle="button" class="card__like-btn"></button>
+                <button type="button" class="card__like-btn"></button>
               </div>
             </li>
           </ul>
